fix checkbox text color too light

--- a/www/less/variables.less
+++ b/www/less/variables.less
@@ -46,7 +46,7 @@
 @label-color: #959B9F;
 
 
-@checkbox-text-color: @khan-blue-light;
+@checkbox-text-color: @khan-black;
 @checkbox-size: 16px;
 @checkbox-checked-color: @khan-blue;
 @checkbox-border: #D4E1E8;
